# discovering_modern_cpp_peter_gottschling_exercises

./: .gitignore  CMakeLists.txt  LICENSE  README.md
chapter_1/: ex_1_age.cpp  ex_2_1_arrays_and_pointers_declarations.cpp
chapter_1/ex2_arrays_and_pointers/: 2_stack.cpp
chapter_1_cpp_basics/: ex_2_2_arrays_and_pointers_stack.cpp
chapter_2/: ex_1_polynomial.cpp
chapter_2_classes/: ex_1_polynomial.cpp
chapter_3/: ex_10_trapezoid_rule.cpp  ex_2_string_representation_of_tuples.cpp  ex_3_generic_stack.cpp  ex_5_and_6_odd_iterator.cpp  iterator_of_a_vector.cpp
chapter_3_generic_programming/: ex_11_12_functor_lambda.cpp  ex_1_string_representation.cpp  ex_3_generic_stack.cpp  ex_4_iterator_of_a_vector.cpp  ex_9_deducing_non_type_template_arguments.cpp
chapter_4_libraries/: ex_1_sorting_by_magnitude.cpp  ex_2_stl_container.cpp  mandelbrot.cpp
chapter_5_meta_programming/: ex_1_type_traits.cpp  ex_2_fibonacci_sequence.cpp  ex_3_greatest_common_divisor.cpp  ex_4_vector_expression_template.cpp
cmake/: FindSDL.cmake
